--- a/frontend/pages/patternRecognition.html
+++ b/frontend/pages/patternRecognition.html
@@ -103,7 +103,7 @@
       <a class="nav-link active" id="dataCollectionTab" onclick="onTabChange('dataCollection'), selectRemover()" tab="patternRecTab">Data Collection</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" id="dataReviewTab" onclick="onTabChange('dataReview'),reviewClicked()">Data Review</a>
+      <a class="nav-link" id="dataReviewTab" onclick="onTabChange('dataReview'),reviewClicked(),drawChart(0,0)">Data Review</a>
     </li>
     <li class="nav-item">
       <a class="nav-link"  id="dataClassificationTab"onclick="onTabChange('dataClassification')">Data Classification</a>
