few delsys fixes

--- a/frontend/pages/patternRecognition.html
+++ b/frontend/pages/patternRecognition.html
@@ -98,7 +98,7 @@
   </script>
 </head>
 
-<body>
+<body style="padding:15px 15px 15px 15px">
   <div id="navigation"></div>
   <ul class="nav nav-tabs">
     <li class="nav-item">
