--- a/frontend/pages/dataReview.html
+++ b/frontend/pages/dataReview.html
@@ -1,3 +1,6 @@
+<!-- Data Review Tab-->
+<!-- Author: Jungjae Lee-->
+<!-- Date: April 2021-->
 <script type="text/javascript">
   var data_ch1;
   var data_ch2;
